# usearch

./: . npmignore  .clang-format  .clang-tidy  .cmake-format.py  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .npmignore  .releaserc  .swift-format  BENCHMARKS.md  CITATION.cff  CMakeLists.txt  CMakeListsInstructions.md  CMakeListsInstructuons.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFEST.in  Package.swift  README.md  VERSION  binding.gyp  build.gradle  build.rs  cargo.toml  cluster.py  conanfile.py  go.mod  package-ci.json  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tsconfig.json  usearch.d.ts  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: Dockerfile.libs  csharp-build-and-test.yml  csharp-release.yml  javascript-ci.yml  libs-build.yml  package.json  prerelease.yml  release.yml  update_version.sh
c/: CMakeLists.txt  Makefile  README.md  lib.cpp  module.modulemap  test.c  usearch.h
cmake/: clipp.cmake  config.cmake.in  emscripten.cmake  jemalloc.cmake  pkg-config.pc.in  usearchConfigVersion.cmake.in
cpp/: CMakeLists.txt  README.md  bench.cpp  test.cpp
csharp/: .editorconfig  .gitignore  Cloud.Unum.USearch.sln  DEV_NOTES.md  DEV_SETUP.md  Directory.Build.props  LibUSearch.Interop.sln  README.md  USearch.NET.sln  build_and_test.cmd  build_and_test.sh  csharp.sln  libusearch-wrapper.sln  libusearch.cs  libusearch.csproj  pack.sh  test.cs  test.csproj
csharp/LibUSearch.Interop/: LibUSearch.Interop.cs  LibUSearch.Interop.csproj
csharp/LibUSearch.Tests/: LibUSearch.Tests.cs  LibUSearch.Tests.csproj
csharp/eng/: build_lib.sh  clean.sh
csharp/libusearch/: libusearch.vcxproj  libusearch.vcxproj.filters  libusearch.x64.nuspec  libusearch.x86.nuspec
csharp/nuget/: NUGET.md  nuget-package.props
csharp/src/Cloud.Unum.USearch/: Cloud.Unum.USearch.csproj  NativeMethods.cs  USearchException.cs  USearchIndex.cs  USearchTypes.cs
csharp/src/Cloud.Unum.USearch.Tests/: Cloud.Unum.USearch.Tests.csproj  InitTests.cs  USearchIndexTests.cs
csharp/src/LibUSearch/: HalfHelper.cs  LibUSearch.csproj  NativeMethods.cs  USearchException.cs  USearchIndex.cs  USearchTypes.cs  Usings.cs
csharp/src/LibUSearch.Tests/: InitTests.cs  LibUSearch.Tests.csproj
csharp/src/USearchNET/: NativeMethods.cs  USearchIndex.cs  USearchNET.csproj  USearchTypes.cs
csharp/src/USearchNET.Tests/: InitTests.cs  USearchNET.Tests.csproj
docs/: Compilation.md  Makefile  benchmarks.md  benchmarks.rst  compilation.md  compilation.rst  conf.dox  conf.py  contributing.rst  format.md  format.rst  index.rst  requirements.txt
docs/_static/: custom.css  custom.js
docs/c/: index.rst  reference.rst
docs/cpp/: index.rst  reference.rst
docs/csharp/: index.rst
docs/golang/: index.rst
docs/java/: index.rst  reference.rst
docs/javascript/: index.rst  reference.rst
docs/objc/: index.rst  reference.rst
docs/python/: index.rst  reference.rst
docs/rust/: index.rst
docs/sqlite/: index.rst
docs/swift/: index.rst  reference.rst
docs/wolfram/: index.rst
golang/: README.md  go.mod  golang.cpp  golang.h  lib.go  lib_test.go  usearch.h  usearch_par_test.go  usearch_test.go
include/usearch/: dummy_stor.hpp  index.hpp  index_dense.hpp  index_plugins.hpp  index_punned_dense.hpp  index_punned_helpers.hpp  lantern_storage.hpp  module.modulemap  simple_storage.hpp  std_storage.hpp  storage.hpp  usearch.hpp
java/: CMakeLists.txt  README.md
java/cloud/unum/usearch/: Index.java  NativeUtils.java  cloud_unum_usearch_Index.cpp  cloud_unum_usearch_Index.h
java/test/: IndexTest.java
javascript/: README.md  docs.js  lib.cpp  node-gyp-build.d.ts  test.js  tsconfig-base.json  tsconfig-cjs.json  tsconfig-esm.json  usearch.d.ts  usearch.js  usearch.test.js  usearch.ts
objc/: ObjectiveUSearch.mm  README.md  USearchObjective.mm
objc/include/: ObjectiveUSearch.h  USearchObjective.h
python/: README.md  bench.py  lib.cpp  lib_sqlite.cpp  test.py
python/scripts/: bench.ipynb  bench.py  bench_cluster.py  bench_exact.py  bench_params.py  cluster.ipynb  index_faiss.py  join.py  test.py  test_distances.py  test_index.py  test_jit.py  test_sparse.py  test_sqlite.py  test_tooling.py
python/usearch/: __init__.py  client.py  eval.py  index.py  io.py  join.py  numba.py  server.py  synthetic.py
rust/: README.md  lib.cpp  lib.hpp  lib.rs
sqlite/: CMakeLists.txt  README.md  lib.cpp
src/: CMakeLists.txt  advanced.hpp  bench.cpp  bench.py  javascript.cpp  lib.rs  main.rs  punned.hpp  python.cpp  rust.cpp  rust.h  rust.hpp  test.cpp  test.js  test.py
swift/: Index+Sugar.swift  README.md  SwiftyUSearch.swift  Test.swift  USearch.swift  USearchIndex+Sugar.swift  USearchIndex.swift  Util.swift
wasm/: CMakeLists.txt  README.md  converter.py  lib.cpp  test.js  usearch-wasm.c  usearch-wasm.h  usearch.wai  usearch_wasm.cpp  usearch_wasm.wai
wolfram/: CMakeLists.txt  PacletInfo.wl  README.md  build.wls  lib.cpp  test.wls
wolfram/Kernel/: USearch.wl
