[package]
name = "usearch"
version = "2.12.0"
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
description = "Smaller & Faster Single-File Vector Search Engine from Unum"
edition = "2021"
license = "Apache-2.0"
publish = true
repository = "https://github.com/unum-cloud/usearch"
documentation = "https://unum-cloud.github.io/usearch"
include = [
    "/rust/**",
    "/include/**",
    "/fp16/include/**",
    "/simsimd/include/**",
    "/stringzilla/include/**",
    "/build.rs",
]

[features]
default = ["simsimd"] # SimSIMD is enabled by default
simsimd = []          # No need to do anything to enable SimSIMD by default
openmp = []           # Optional: Users can enable OpenMP
fp16lib = []          # Optional: Users can enable FP16 support

[lib]
name = "usearch"
path = "rust/lib.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
