[package]
name = "usearch"
version = "2.20.1"
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
description = "Smaller & Faster Single-File Vector Search Engine from Unum"
edition = "2021"
license = "Apache-2.0"
publish = true
repository = "https://github.com/unum-cloud/usearch"
documentation = "https://unum-cloud.github.io/usearch"
include = [
    "/rust/**",
    "/include/**",
    "/fp16/include/**",
    "/simsimd/include/**",
    "/simsimd/c/**",
    "/stringzilla/include/**",
    "/build.rs",
]

[features]
default = ["simsimd", "fp16lib"] # SimSIMD is enabled by default
simsimd = []                     # No need to do anything to enable SimSIMD by default
fp16lib = []                     # Without this FP16 we lose precision downcasting
openmp = []                      # Optional: Users can enable OpenMP

[lib]
name = "usearch"
path = "rust/lib.rs"

[dependencies]
cxx = "1.0.160"

[build-dependencies]
cxx-build = "1.0.160"

[dev-dependencies]
fork_union = "2.1.1"  # for concurrency tests
rand_distr = "0.5.1"  # uniform floats distribution
rand_chacha = "0.9.0" # random number generator
rand = "0.9.1"
